Fixes for layout issues.

--- a/src/main/resources/public/css/site.css
+++ b/src/main/resources/public/css/site.css
@@ -87,6 +87,8 @@ footer a:hover {
     font-family: 'Noto Sans', sans-serif;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-right: 30px;
+    float: left;
 }
 
 .button.button-secondary {
@@ -133,14 +135,17 @@ h3 {
     font-weight: bold;
     line-height: 1.2em;
 }
+
 h1 {
     font-size: 40px;
     margin-bottom: 12px;
+    text-align: left;
 }
 
 h2 {
     font-size: 20px;
     color: #333;
+    text-align: left;
 }
 h3 {
     font-size: 28px;
@@ -148,6 +153,7 @@ h3 {
 p {
     font-size: 15px;
     line-height: 1.8em;
+    text-align: left;
 }
 p a {
     border-bottom: 2px solid #c1c1c1;
@@ -186,7 +192,7 @@ a.link:hover {
 }
 .entry-list article {
     margin-bottom: 70px;
-    text-align: center;
+    text-align: left;
 }
 .entry-list article:last-child {
     margin-bottom: 5px;
